--- a/lib/bower.json
+++ b/lib/bower.json
@@ -18,7 +18,8 @@
   ],
   "dependencies": {
     "polymer": "Polymer/polymer#1.2.0",
-    "iron-input": "PolymerElements/iron-input#~1.0.7"
+    "iron-input": "PolymerElements/iron-input#~1.0.7",
+    "paper-toolbar": "PolymerElements/paper-toolbar#~1.1.2"
   },
   "resolutions": {
     "polymer": "^1.2.1",
